Fix alignment for small device

--- a/src/scss/smallDevice.scss
+++ b/src/scss/smallDevice.scss
@@ -9,7 +9,7 @@
     float: none;
     text-align: center;
     width: 90%;
-    margin: 10px 0;
+    margin: 10px auto !important;
   }
   
   .container{
@@ -31,10 +31,8 @@
     }
 
     .navbar-collapse{
-      margin: 80px 0 0!important;
       width: 100vw !important;
       a{
-        padding: 10px 40px !important;
         line-height: 20px !important;
       }
     }
@@ -42,9 +40,13 @@
     .dropdown-menu{
       li{
         padding: 0 20px !important;
-        width: 100vw;
+        width: 60vw;
       }
     }
+  }
+
+  header .navbar-collapse{
+    margin: 18px 0 0!important;
   }
 
   #getMessage{
@@ -56,7 +58,7 @@
       // margin-bottom: 20px !important;
       margin: 5px auto 20px auto !important;
     }
-    #sidebar{
+    #messagebar{
       margin: 10px auto;
     }
     .carousel-indicators{
@@ -134,6 +136,12 @@
 
   footer{
     padding-top: 10px;
+    .navbar-collapse{
+      padding-left: 30px !important;
+    }
+    .dropdown-menu img{
+      margin-top: 0 !important;
+    }
   }
 
   #testimonials button,
